# killifish-rust

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile
api/: test-rust.http
cmd/: deploy.md  docker.md  docker.sh
src/: main.rs  types.rs
src/errors/: mod.rs
src/handlers/: mod.rs  persons.rs  recordings.rs  todos.rs
src/jwt/: mod.rs
src/mongo/: mod.rs
src/utils/: extractor.rs
