[package]
name = "killifish"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.3", features = ["ws", "headers", "serde_json"] }
axum-macros = "0.2.0"
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.0", features = ["cors"] }
http-body = "0.4.4"
serde = "1.0.136"
serde_json = "1.0.79"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
anyhow = "1.0.57"
thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }
mongodb = "2.2.1"
bson = { version = "2.0.0", features = ["chrono-0_4"] }
futures = "0.3.21"
jsonwebtoken = "8.1.1"
once_cell = "1.12.1"
async-trait = "0.1.56"
